--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum similique velit, totam sunt optio minus commodi pariatur quia, vel perferendis, magni accusantium omnis? Libero, illo? Excepturi doloremque aspernatur corporis ullam magni laudantium est, vel vitae quod? Deserunt molestiae labore blanditiis praesentium quisquam id sapiente, molestias numquam? Earum, nesciunt. Maiores in tempora non odio impedit voluptatem iusto, ullam veniam excepturi quae quibusdam nobis adipisci quam velit enim vero debitis nisi explicabo cupiditate voluptates eaque? Nesciunt aliquid illum eligendi ipsa deserunt possimus fugiat officia nostrum perspiciatis quia a, totam voluptatem incidunt explicabo quae dignissimos quam in neque reprehenderit aut sed vitae saepe.
     </p>
+    <p>
+        <h2>Paragraph-2</h2>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum similique velit, totam sunt optio minus commodi pariatur quia, vel perferendis, magni accusantium omnis? Libero, illo? Excepturi doloremque aspernatur corporis ullam magni laudantium est, vel vitae quod? Deserunt molestiae labore blanditiis praesentium quisquam id sapiente, molestias numquam? Earum, nesciunt. Maiores in tempora non odio impedit voluptatem iusto, ullam veniam excepturi quae quibusdam nobis adipisci quam velit enim vero debitis nisi explicabo cupiditate voluptates eaque? Nesciunt aliquid illum eligendi ipsa deserunt possimus fugiat officia nostrum perspiciatis quia a, totam voluptatem incidunt explicabo quae dignissimos quam in neque reprehenderit aut sed vitae saepe.
+    </p>
     
 </body>
 </html>
